[gd_scene load_steps=5 format=3 uid="uid://wtnpobjnudp3"]

[ext_resource type="Script" path="res://scripts/character_creator.gd" id="1_t5nvq"]
[ext_resource type="PackedScene" uid="uid://b122j6j8bxdt8" path="res://scenes/sprite_holder.tscn" id="2_f7lx2"]
[ext_resource type="AnimationLibrary" uid="uid://dbbrrvxcsp7rq" path="res://assets/animations/player_animations.res" id="4_07d35"]
[ext_resource type="FontFile" uid="uid://w5au3qgso01t" path="res://fonts/AstroSpace-0Wl3o.otf" id="5_23a7o"]

[node name="CharacterCreator" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_t5nvq")

[node name="SpriteHolder" parent="." instance=ExtResource("2_f7lx2")]
position = Vector2(305, 112)
scale = Vector2(12, 12)

[node name="Hat" type="Label" parent="."]
layout_mode = 0
offset_left = 618.0
offset_top = 75.0
offset_right = 684.0
offset_bottom = 111.0
theme_override_fonts/font = ExtResource("5_23a7o")
theme_override_font_sizes/font_size = 28
text = "Hat"

[node name="Left" type="Button" parent="Hat"]
layout_mode = 0
offset_left = -62.0
offset_top = -5.0
offset_right = -24.0
offset_bottom = 26.0
text = "Left"

[node name="Right" type="Button" parent="Hat"]
layout_mode = 0
offset_left = 83.0
offset_top = -6.0
offset_right = 121.0
offset_bottom = 25.0
text = "Right"

[node name="Hair" type="Label" parent="."]
layout_mode = 0
offset_left = 616.0
offset_top = 125.0
offset_right = 682.0
offset_bottom = 161.0
theme_override_fonts/font = ExtResource("5_23a7o")
theme_override_font_sizes/font_size = 28
text = "Hair"

[node name="Left" type="Button" parent="Hair"]
layout_mode = 0
offset_left = -62.0
offset_top = -5.0
offset_right = -24.0
offset_bottom = 26.0
text = "Left"

[node name="Right" type="Button" parent="Hair"]
layout_mode = 0
offset_left = 83.0
offset_top = -6.0
offset_right = 121.0
offset_bottom = 25.0
text = "Right"

[node name="HairColor" type="Label" parent="."]
layout_mode = 0
offset_left = 573.0
offset_top = 174.0
offset_right = 754.0
offset_bottom = 210.0
theme_override_fonts/font = ExtResource("5_23a7o")
theme_override_font_sizes/font_size = 28
text = "Hair Color"

[node name="Left" type="Button" parent="HairColor"]
layout_mode = 0
offset_left = -62.0
offset_top = -5.0
offset_right = -24.0
offset_bottom = 26.0
text = "Left"

[node name="Right" type="Button" parent="HairColor"]
layout_mode = 0
offset_left = 204.0
offset_top = -1.0
offset_right = 253.0
offset_bottom = 30.0
text = "Right"

[node name="Body" type="Label" parent="."]
layout_mode = 0
offset_left = 609.0
offset_top = 223.0
offset_right = 693.0
offset_bottom = 259.0
theme_override_fonts/font = ExtResource("5_23a7o")
theme_override_font_sizes/font_size = 28
text = "Body"

[node name="Left" type="Button" parent="Body"]
layout_mode = 0
offset_left = -62.0
offset_top = -5.0
offset_right = -24.0
offset_bottom = 26.0
text = "Left"

[node name="Right" type="Button" parent="Body"]
layout_mode = 0
offset_left = 108.0
offset_top = -1.0
offset_right = 157.0
offset_bottom = 30.0
text = "Right"

[node name="Outfit" type="Label" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 270.0
offset_right = 706.0
offset_bottom = 306.0
theme_override_fonts/font = ExtResource("5_23a7o")
theme_override_font_sizes/font_size = 28
text = "Outfit
"

[node name="Left" type="Button" parent="Outfit"]
layout_mode = 0
offset_left = -62.0
offset_top = -5.0
offset_right = -24.0
offset_bottom = 26.0
text = "Left"

[node name="Right" type="Button" parent="Outfit"]
layout_mode = 0
offset_left = 121.0
offset_top = -4.0
offset_right = 170.0
offset_bottom = 27.0
text = "Right"

[node name="Random" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 292.0
offset_right = 123.0
offset_bottom = 323.0
text = "Random"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"player": ExtResource("4_07d35")
}

[node name="Stam" type="Label" parent="."]
layout_mode = 0
offset_left = 381.0
offset_top = 408.0
offset_right = 465.0
offset_bottom = 440.0
theme_override_fonts/font = ExtResource("5_23a7o")
theme_override_font_sizes/font_size = 28
text = "STAM"

[node name="Def" type="Label" parent="."]
layout_mode = 0
offset_left = 532.0
offset_top = 407.0
offset_right = 616.0
offset_bottom = 439.0
theme_override_fonts/font = ExtResource("5_23a7o")
theme_override_font_sizes/font_size = 28
text = "DEF"

[node name="Cha" type="Label" parent="."]
layout_mode = 0
offset_left = 682.0
offset_top = 407.0
offset_right = 766.0
offset_bottom = 439.0
theme_override_fonts/font = ExtResource("5_23a7o")
theme_override_font_sizes/font_size = 28
text = "CHA"

[node name="Wit" type="Label" parent="."]
layout_mode = 0
offset_left = 823.0
offset_top = 407.0
offset_right = 907.0
offset_bottom = 439.0
theme_override_fonts/font = ExtResource("5_23a7o")
theme_override_font_sizes/font_size = 28
text = "WIT"

[node name="Hat2" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 408.0
offset_right = 108.0
offset_bottom = 440.0
theme_override_fonts/font = ExtResource("5_23a7o")
theme_override_font_sizes/font_size = 28
text = "Hat:"

[connection signal="button_up" from="Random" to="." method="_on_random_button_up"]
